make footer fixed and visible at the botoom of the page

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -16,6 +16,7 @@ h1 {
 
 main {
     padding: 20px;
+    padding-bottom: 60px;
 }
 
 article {
@@ -55,6 +56,15 @@ footer {
     text-align: center;
     padding: 10px;
     width: 100%;
+    height: auto;
     position: fixed;
     bottom: 0;
 }
+
+footer p{
+    margin: 0;
+    line-height: 40px;
+}
+
+
+
